test/test_cases/invalid/syntaxErr/expressions/printlnConcat.ast
-- Test: printlnConcat.wacc

-- Uploaded file: 
---------------------------------------------------------------
# string concatenation is not part of the language

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  println "Hello " ++ "World!"
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:22 -- mismatched input '"' expecting INTEGER
1 parser error(s) detected, no further compilation attempted.

